frontend/src/Results.module.css
.customResultsPanel {
    width: 400px; /* Fixed width */
    max-width: 98vw;
    margin: auto; /* Center the panel */
    padding-top: 20px;
}

.spacer {
    height: 20px; /* Space between fields */
}

.customParagraph {
    margin-bottom: 1em; /* Adjust as needed for spacing */
}

.contactInfo {
    margin-bottom: 1em; /* Optional, for consistent spacing */
    display: flex; /* Use flexbox for layout */
    align-items: center;
    justify-content: center;
}

.contactInfoText {
    margin-right: 5px; /* Space between icon and text */
}

.customField label {
    flex: 0 0 100px; /* Adjust label width */
    margin-right: 10px; /* Space between label and input box */
    text-align: right; /* Align text to the right */
}

.customField {
    display: flex; /* Use flexbox for layout */
    align-items: center; /* Align items vertically */
    margin-bottom: 10px; /* Space between fields */
}

.customDrawing {
    display: flex;
    justify-items: center;
    align-items: center;
    width: 400px;
}

.fullBox {
    display: grid;
    place-items: center;
    width: 100vw;
    height: 100vh;
}

